# Pressey-AI-Test-Generator

./: .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: RELEASE_BODY.md
.github/workflows/: ci.yml  release.yml
.omo/: boulder.json
.omo/evidence/: task-1-types-compile.txt  task-12-favicon.txt  task-12-sidebar-logo-raw.txt  task-12-sidebar-logo.txt  task-12-svelte-check.txt  task-13-tauri-icons.txt  task-2-db-path-check.txt  task-2-registry-tests.txt  task-3-error-handling.txt  task-3-logo-render.txt  task-3-svg-valid.txt  task-3-validation-pass.txt  task-4-error-message.txt  task-5-version-check.txt  task-7-migration-0.txt  task-7-migration-70.txt  task-7-theme-accent-regression.txt  task-8-provider-key-validation.txt  task-8-toggle-validation.txt  wave1-tests.txt
.omo/plans/: pressey-ai-test-generator.md  pressey-tweaks.md
.omo/run-continuation/: ses_132dad5d4ffe0nq3XRImVS3eF5.json  ses_13366c16cffegnqkg0nQ3wp9re.json  ses_1337c9e59ffevMPJ6vA6zWfxKI.json  ses_1338f4c0cffeuM1SdeVOhoRmfS.json  ses_1339e1eafffed6wzRHHLJGPIWp.json
src/: App.css  App.svelte  main.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file.rs
src/components/: Badge.svelte  Badge.test.ts  Button.svelte  Button.test.ts  Card.svelte  Card.test.ts  ErrorBoundary.svelte  (+14 more)
(+57 files in other folders)
