[package]
name = "pressey-ai-test-generator"
version = "0.2.2"
description = "AI-powered test generator desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pressey_ai_test_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = { version = "2", features = [] }
tauri-plugin-http = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdf-extract = "0.7"
tauri-plugin-fs = "2"

